--- a/style.css
+++ b/style.css
@@ -3,6 +3,10 @@
     src: url("./assets/font-family/Dancing_Script4/DancingScript-VariableFont_wght.ttf");
 }
 
+::-webkit-scrollbar{
+display: none;
+}
+
 *{
     margin: 0;
     padding: 0;
@@ -23,9 +27,10 @@ body{
     height: 60px;
     background-color: #000;
     padding: 5px 20px;
-    box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15);
+    box-shadow:0px 0px 30px 5px rgba(255,255,255,0.3);
     display: flex;
     color: #fff;
+    position: sticky;
 }
 .nav-bar-left{
     width: 20%;
@@ -91,6 +96,29 @@ input:checked~.all-menu{
             color: #000;
         }
     }
+}
+
+
+#body{
+    width: 100%;
+    /* background-color:#000; */
+    color: #fff;
+    height: calc(100vh - 60px);
+    overflow-y: scroll;
+    background-color: #000;
+
+
+}
+.style-container{
+    transform: rotate(180deg);
+    
+
+}
+.data-container{
+    height: 500px;
+    width: 100%;
+    display: flex;
+    padding: 20px;
 }
 
 
